# foray-irradiance-cache

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  readme.md
cmake/: foray_example.cmake
data/gltf/CornellBox/: CornellBox.blend  CornellBox.gltf  README.md
data/gltf/CornellBoxPointLight/: CornellBoxPointLight.blend  CornellBoxPointLight.gltf  README.md
examples/: CMakeLists.txt
examples/00-direct-light-cache/: README.md  foray_complexrtapp.hpp
examples/00-direct-light-cache/shaders/: bindpoints.glsl  directlight.glsl  raygen.rgen.ded37d6679810488.spv
examples/00-direct-light-cache/shaders/default/: anyhit.rahit.4148ad76409669af.spv  closesthit.rchit  (+2 more)
examples/00-direct-light-cache/src/: FinalRTStage.cpp  FinalRTStage.h  IrradianceCache.cpp  IrradianceCache.h  IrradianceCacheApp.cpp  IrradianceCacheApp.h  IrradianceCacheDirectStage.cpp  IrradianceCacheDirectStage.h  IrradianceCacheFillStage.cpp  IrradianceCacheFillStage.hpp  IrradianceCacheGui.cpp  IrradianceCacheGui.h  IrradianceCacheIndirectStage.cpp  IrradianceCacheIndirectStage.h  IrrradianceCacheMode.h  ProbeMat.h  VisiTest.cpp  VisiTest.h  main.cpp
examples/irradiance-cache/: README.md
examples/irradiance-cache/shaders/: bindpoints.glsl  directlight.glsl  indirectlight.glsl
examples/irradiance-cache/src/: FinalRTStage.cpp  IrradianceCache.cpp  IrradianceCache.h  IrradianceCacheApp.cpp  IrradianceCacheApp.h  IrradianceCacheDirectStage.cpp  IrradianceCacheDirectStage.h  IrradianceCacheGui.cpp  IrradianceCacheIndirectStage.cpp  IrrradianceCacheMode.h  ProbeMat.cpp  VisiTest.cpp
(+32 files in other folders)
